# pare

./: .gitignore  Makefile  README.md  pyproject.toml  tach.toml  tach.yml
.github/workflows/: ci.yml  publish.yml
api/: README.md  deploy.sh  requirements.in  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 05cbaf7d642d_initial_migration.py  1b5bd8a97b9f_add_email_to_user.py  4b2a99248a2a_initial_migration.py
api/scripts/: refresh_docker_auth_to_ecr.py  refresh_docker_auth_to_ecr.sh
api/src/: app.py  auth.py  constants.py  db.py  middleware.py  settings.py  utils.py
api/src/auth/: api_key.py  github.py  routes.py
api/src/core/: models.py
api/src/deploy/: __init__.py  lambda_deploy.py  routes.py
api/src/manage/: routes.py
api/src/models/: __init__.py  deployment.py  user.py
api/src/status/: routes.py
api/src/transform/: __init__.py  build_lambda_handler.py  template.py
cli/: console.py  deploy.py  main.py
cli/tests/: sample.py  test_deploy.py  test_main.py
gauge/: __init__.py  errors.py  settings.py
gauge/cli/: console.py  delete.py  deploy.py  main.py
gauge/cli/tests/: sample.py  test_deploy.py  test_main.py
gauge/sdk/: main.py
gauge/sdk/tests/: test_sdk.py
pare/: __init__.py  client.py  errors.py  login.py  settings.py
pare/cli/: constants.py  delete.py  deploy.py  main.py
pare/cli/tests/: sample.py  test_deploy.py  test_main.py
pare/sdk/: main.py
pare/sdk/tests/: test_sdk.py
pkg/cli/: main.py
pkg/cli/tests/: test_main.py
pkg/pare/: client.py  constants.py  login.py  models.py  settings.py
pkg/pare/cli/: console.py  constants.py  delete.py  deploy.py  main.py  status.py
pkg/pare/cli/tests/: sample.py  test_deploy.py  test_main.py
pkg/pare/sdk/: main.py
pkg/pare/sdk/tests/: test_sdk.py
pkg/sdk/: config.py  main.py
sdk/: config.py  main.py
sdk/tests/: sample.py  test_sdk.py
