[project]
name = "gauge-serverless"
version = "0.0.2"
authors = [
  { name="Caelean Barnes", email="caeleanb@gmail.com" },
  { name="Evan Doyle", email="evanmdoyle@gmail.com" },
]
description = "Effortless serverless, in your own cloud"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich~=13.0",
    "pydantic~=2.0",
    "stdlib-list>=0.10.0; python_version < '3.10'",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
    "boto3~=1.34.145",
    "requests~=2.32.3",

]
keywords = ['python', 'lambda', 'aws', 'serverless', 'fastapi']


[project.urls]
Homepage = "https://github.com/gauge-sh/gauge-serverless"
Issues = "https://github.com/gauge-sh/tach/gauge-serverless"

[tool.ruff]
target-version = "py38"
lint.extend-select = ["I", "TCH", "UP"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic.RootModel",
]
runtime-evaluated-decorators = [
    "pydantic.dataclasses.dataclass",
    "dataclasses.dataclass",
]
exempt-modules = ["typing", "typing_extensions"]

[tool.pyright]
exclude = ["**/__pycache__", ".venv"]
strict = ["."]
pythonVersion = "3.8"

[project.scripts]
gauge = "cli.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["cli", "sdk"]
#include = ["README.md", "LICENSE"]